--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naming Convention Checker</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <!-- Include the XLSX library for reading Excel files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
     <script type="module" src="/script.js"></script>
 </head>
 <body>
     <div class="container">
+        <img src="ETHOS_SoloTab-RGB-logo.jpg" alt="Ethos Engineering Logo" class="logo">
         <h1>Naming Convention Checker</h1>
         <form id="upload-form">
             <label for="file-input">Upload Naming Convention Excel:</label>
@@ -33,3 +34,5 @@
 </body>
 </html>
 
+
+<
