--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </table>
         <button id="export-button">Export Results</button>
     </div>
-    
+    <footer>
+        Web application developed by Rubens Lage and ChatGPT
+    </footer>
 </body>
 </html>
-
-
