--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Naming Convention Checker</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Include the XLSX library for reading Excel files -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script type="module" src="/script.js"></script>
+    <!-- Include the XLSX library for reading Excel files with SRI -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js" 
+    integrity="sha384-vtjasyidUo0kW94K5MXDXntzOJpQgBKXmE7e2Ga4LG0skTTLeBi97eFAXsqewJjw" 
+    crossorigin="anonymous"></script>
+    <script type="module" src="script.js"></script>
 </head>
 <body>
     <div class="container">
