Layout adjustments, steps order

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
         <h1>Naming Convention Checker</h1>
 
         <div class="form-and-download">
-            <div class="upload-section">
-                <form id="upload-form">
-                    <label for="file-input">Upload Your Project Naming Convention:</label>
-                    <input type="file" id="file-input" accept=".xls,.xlsx,.xlsm">
-                </form>
-            </div>
             <div class="template-download">
-                <label>Download Naming Convention Template</label>
+                <label>1st - Download Naming Convention Template</label>
                 <ul id="template-list">
                     <li><a href="/Naming Convention Template.xlsx" download>Naming Convention Template.xlsx</a></li>
                 </ul>
             </div>
+            <div class="upload-section">
+                <form id="upload-form">
+                    <label for="file-input">2nd - Upload Your Project Naming Convention:</label>
+                    <input type="file" id="file-input" accept=".xls,.xlsx,.xlsm">
+                </form>
+            </div>            
         </div>
 
-        <button id="folder-select-button">Select Folder with Files to Check Naming Convention</button>
+        <button id="folder-select-button">3rd - Select Folder with Files to Check Naming Convention</button>
         <table id="results-table">
             <thead>
                 <tr>
@@ -42,7 +42,7 @@
             </thead>
             <tbody></tbody>
         </table>
-        <button id="export-button">Export Results</button>
+        <button id="export-button">4th - Export Results</button>
     </div>
     <footer>
         Web application developed by Rubens Lage and ChatGPT
