--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="ETHOS_SoloTab-RGB-logo.jpg" alt="Ethos Engineering Logo" class="logo">
+        <img src="/company-logo.png" alt="BIM Smart Logo" class="logo">
         <h1>Naming Convention Checker</h1>
 
         <div class="form-and-download">
@@ -45,7 +45,9 @@
         <button id="export-button">4th - Export Results</button>
     </div>
     <footer>
-        Web application developed by Rubens Lage and ChatGPT
+        <p>Web application developed by Rubens Lage and ChatGPT</p>
+        <p>Send feedback to: <a href="mailto:feedback@example.com">feedback@example.com</a></p>
     </footer>
+    <p class="beta-version">Beta Version</p>
 </body>
 </html>
