--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="ETHOS_SoloTab-RGB-logo.jpg" alt="Ethos Engineering Logo" class="logo">
+        <img src="/company-logo.jpg" alt="Ethos Engineering Logo" class="logo">
         <h1>Naming Convention Checker</h1>
 
         <div class="form-and-download">
