sheets script updated

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Naming Convention Checker</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Include the XLSX library for reading Excel files with SRI -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js" 
-    integrity="sha384-vtjasyidUo0kW94K5MXDXntzOJpQgBKXmE7e2Ga4LG0skTTLeBi97eFAXsqewJjw" 
-    crossorigin="anonymous"></script>
+    <!-- use version 0.20.3 -->
+    <script lang="javascript" src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
+
     <script type="module" src="script.js"></script>
 </head>
 <body>
