Mark wrong names in red

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <a href="https://www.ethoseng.ie/" target="_blank">
-            <img src="/company-logo.jpg" alt="Ethos Engineering Logo" class="logo">
+            <img src="company-logo.jpg" alt="Ethos Engineering Logo" class="logo">
         </a>
         <h1>Naming Convention Checker</h1>
 
@@ -22,7 +22,7 @@
             <div class="template-download">
                 <label>1st - Download Naming Convention Template</label>
                 <ul id="template-list">
-                    <li><a href="/Naming Convention Template.xlsx" download>Naming Convention Template.xlsx</a></li>
+                    <li><a href="Naming Convention Template.xlsx" download>Naming Convention Template.xlsx</a></li>
                 </ul>
             </div>
             <div class="upload-section">
