Read sub-folders, group and file path

--- a/index.html
+++ b/index.html
@@ -72,13 +72,16 @@
         <table id="results-table">
             <thead>
                 <tr>
+                    <th>Folder Path</th>
                     <th>File Name</th>
                     <th>Compliance Status</th>
                     <th>Details</th>
                 </tr>
             </thead>
             <tbody></tbody>
-        </table>
+        </table>   
+       
+        
         <button id="export-button">4th - Export Results</button>
     </div>
     <footer>
